launchpad-buildd (244) UNRELEASED; urgency=medium

  [ Yuliy Schwartzburg ]
  * Enable git protocol v2 in focal.

  [ Simone Pelosi ]
  * Add deb822 support for series >= 24.04.

 -- Simone Pelosi <simone.pelosi@canonical.com>  Tue, 24 Sep 2024 15:50:13 +0200

launchpad-buildd (243) focal; urgency=medium

  [ Simone Pelosi ]
  * Delete apt cache before fetch-service set up. 
  * Enable fetch service for rock builds.
  * Refactor fetch service initialization.

 -- Simone Pelosi <simone.pelosi@canonical.com>  Mon, 23 Sep 2024 16:47:24 +0200

launchpad-buildd (242) focal; urgency=medium
  
  [ Quentin Debhi ]
  * Add sourcecraft build type.

 -- Simone Pelosi <simone.pelosi@canonical.com>  Thu, 05 Sep 2024 15:31:54 +0200

launchpad-buildd (241) focal; urgency=medium

    [ Quentin Debhi ]
    * Add rockcraft build type.

    [ Simone Pelosi ]
    * Add LimitNOFILE configuration to launchpad-buildd daemon.

 -- Simone Pelosi <simone.pelosi@canonical.com>  Wed, 21 Aug 2024 12:35:08 +0200

launchpad-buildd (240) focal; urgency=medium

    [ Tushar Gupta ]
    * Fix compatibility issues with Noble.
    * Adapt version schema for the Python build to adhere to PEP 440.

    [ Jürgen Gmach ]
    * Prefer `--single-branch` over `--no-single-branch` when cloning
    repositories to avoid branch scalability issues. Fixes LP:#2067047

 -- Jürgen Gmach <juergen.gmach@canonical.com>  Fri, 26 Jul 2024 16:14:16 +0200

launchpad-buildd (239) focal; urgency=medium

  * Restart snapd after certificate installation and proxy initialization.

 -- Simone Pelosi <simone.pelosi@canonical.com>  Wed, 12 Jun 2024 16:28:26 +0200

launchpad-buildd (238) focal; urgency=medium

  [ Simone Pelosi ]
  * Add snapd proxy configuration.

  [ Inês Almeida ]
  * Update fetch service token revocation to send token in payload
    instead of auth headers.

 -- Simone Pelosi <simone.pelosi@canonical.com>  Fri, 07 Jun 2024 17:05:35 +0200

launchpad-buildd (237) focal; urgency=medium

  [ Simone Pelosi ]